--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gen1catchrates",
+  "name": "gen1dvcalculator",
   "version": "0.0.1",
-  "description": "TAS Console Verifications",
+  "description": "Gen 1 Classic DV Calculator",
   "license": "MIT",
   "author": "TiKevin83",
   "repository": {
@@ -9,31 +9,23 @@
     "url": "https://github.com/tikevin83"
   },
   "devDependencies": {
-    "@babel/compat-data": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0",
     "del": "^5.1.0",
-    "fs": "^0.0.1-security",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-csso": "^4.0.1",
     "gulp-data": "^1.3.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-terser-js": "^5.2.2"
   },
   "engines": {
-    "node": ">=0.13.0"
+    "node": ">=0.14.0"
   },
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {},
-  "resolutions": {
-    "@babel/preset-env": "^7.9.0"
-  }
+  "resolutions": {}
 }
